--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#FFD5D5D5"
+    android:background="#FFCC00"
     tools:context=".MainActivity">
+
+    <Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?android:actionBarSize"
+        android:background="#FF9900">
+    </Toolbar>
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFE3E3E3"
-        android:divider="#FFD5D5D5"
-        android:dividerHeight="8dp" >
+        android:background="#FFFF99"
+        android:divider="#FFCC00"
+        android:dividerHeight="8dp"
+        android:layout_below="@+id/toolbar">
     </ListView>
-
-
 
 
 </RelativeLayout>
