--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -12,5 +12,11 @@
         android:title="@string/action_add"
         android:icon="@android:drawable/ic_menu_add"/>
 
+    <item
+        android:id="@+id/action_del"
+        android:orderInCategory="1"
+        app:showAsAction="always"
+        android:title="@string/action_delete"
+        android:icon="@android:drawable/ic_menu_add"/>
 
 </menu>
